--- a/app/actor/sonic.css
+++ b/app/actor/sonic.css
@@ -7,7 +7,7 @@
 	width: 64px;
 	--sprite-offset-x: 0px;
 	--sprite-offset-y: 0px;
-	z-index: 1;
+	/*z-index: 1;*/
 }
 
 .actor-item.actor-sonic .sprite:after {
@@ -24,7 +24,7 @@
 	width: 100%;
 	--sprite-offset-x: 0px;
 	--sprite-offset-y: 0px;
-	z-index: 1;
+	/*z-index: 1;*/
 
 	backdrop-filter: var(--bg-filter);
 	filter: blur(0px);
@@ -44,7 +44,7 @@
 	left: 0px;
 	height: 100%;
 	width: 100%;
-	z-index: -10;
+	/*z-index: -10;*/
 }
 
 .actor-item.actor-sonic .sprite:before {
