--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -91,7 +91,7 @@
 .screen-card-pause-menu .subtext,
 .screen-card-main-menu .subtext {
 	/*display: none;*/
-	transform: scale(0.666);
+	transform: scale(0.666) translate(0, -3px);
 
 	transform-origin: top left;
 
@@ -122,6 +122,7 @@
 .screen-card-main-menu li:not(.unavailable):focus .subtext,
 .screen-card-main-menu li:not(.unavailable):focus-within .subtext,
 .screen-card-main-menu li:not(.unavailable).focused .subtext,
+.screen-card-main-menu .unavailable::after,
 .screen-card-main-menu .unavailable.focused::after,
 .screen-card-main-menu .unavailable:focus-within::after,
 .screen-card-main-menu .unavailable:focus::after {
@@ -301,6 +302,17 @@
 	padding-left: 0.75em;
 	font-size: 0.5em;
 	content: '▶';
+}
+
+.screen-card-pause-menu li.focused [data-wraps=number]::before,
+ .screen-card-main-menu li.focused [data-wraps=number]::before,
+.screen-card-pause-menu li.focused [data-wraps=select]::before,
+ .screen-card-main-menu li.focused [data-wraps=select]::before,
+.screen-card-pause-menu li.focused [data-wraps=number]::after,
+ .screen-card-main-menu li.focused [data-wraps=number]::after,
+.screen-card-pause-menu li.focused [data-wraps=select]::after,
+ .screen-card-main-menu li.focused [data-wraps=select]::after {
+	color: #e1ee5f;
 }
 
 .screen-card-pause-menu input,
