--- a/app/ui/hud-character.css
+++ b/app/ui/hud-character.css
@@ -38,14 +38,24 @@ li:focus .small-menu-font .hud-character {
 	/*background-image: url(/Sonic/small-menu-font-yellow-italic.png);*/
 }
 
-li.available .small-menu-font .hud-character,
-li.unavailable .small-menu-font .hud-character {
+li.focused .font .hud-character,
+li:focus .font .hud-character {
+	background-image: url(/Sonic/font-yellow.png);
+}
+
+li.available .hud-character,
+li.unavailable .hud-character {
 	transition: background-image 0.10s ease-out;
 }
 
 li.unavailable .small-menu-font .hud-character {
 	/*background-image: url(/Sonic/small-menu-font-grey.png);*/
 	background-image: url(/Sonic/small-menu-font-italic-grey.png);
+}
+
+li.unavailable .font .hud-character {
+	/*background-image: url(/Sonic/small-menu-font-grey.png);*/
+	background-image: url(/Sonic/font-grey.png);
 }
 
 li:focus.unavailable .small-menu-font .hud-character,
